--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sveltekit",
   "version": "0.0.1",
   "scripts": {
-    "dev": "svelte-kit dev --host --port 5000",
+    "dev": "svelte-kit dev --host --port 7000",
     "build": "svelte-kit build",
     "package": "svelte-kit package",
     "preview": "svelte-kit preview",
@@ -11,10 +11,28 @@
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "next",
+    "@sveltejs/adapter-node": "^1.0.0-next.55",
+    "@sveltejs/adapter-static": "^1.0.0-next.21",
     "@sveltejs/kit": "next",
+    "attractions": "^3.5.2",
+    "postcss": "^8.4.4",
     "prettier": "^2.4.1",
     "prettier-plugin-svelte": "^2.4.0",
-    "svelte": "^3.44.0"
+    "sass": "^1.44.0",
+    "svelte": "^3.44.0",
+    "svelte-preprocess": "^4.9.8"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "@macfja/svelte-persistent-store": "^1.2.0",
+    "axios": "^0.24.0",
+    "jwt-decode": "^3.1.2",
+    "lodash": "^4.17.21",
+    "materialize-css": "^1.0.0",
+    "svelte-forms-lib": "^2.0.0",
+    "svelte-material-ui": "^6.0.0-beta.5",
+    "svelte-spa-router": "^3.2.0",
+    "svelte-use-form": "^2.4.3",
+    "yup": "^0.32.11"
+  }
 }
