New Commit - Updated

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,25 @@
-.DS_Store
-node_modules
-/build
-/.svelte-kit
-/package
-.env
-.env.*
+
+
+	# Logs #
+	######################
+	*.log
+
+	# OS generated files #
+	######################
+	.DS_Store*
+	ehthumbs.db
+	Icon?
+	Thumbs.db
+
+	# Editor files #
+	################
+	.vscode
+	@xparta
+
+	# ignore ALL .log files
+	*.log
+
+	# ignore ALL files in ANY directory named temp
+	temp/
+
+	gitpush.bat
